--- a/Atividade03/atv3.ipynb
+++ b/Atividade03/atv3.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,22 +104,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def GenerateDataByMethod(lenghts, n, method, name):\n",
+    "def GenerateDataByMethod(lenghts, n, method, name, inputTypeArray=True):\n",
     "    f = open(\"{0}.txt\".format(name),\"w\")\n",
     "    for l in lenghts:\n",
     "        res = 0\n",
     "        for i in range(n):\n",
-    "            v = l.copy()\n",
-    "            ini = time()\n",
-    "            method(v)\n",
-    "            fin = time()\n",
-    "            res += fin-ini\n",
+    "            if(inputTypeArray):\n",
+    "                v = l.copy()\n",
+    "                ini = time()\n",
+    "                method(v)\n",
+    "                fin = time()\n",
+    "                res += fin-ini\n",
+    "            else:\n",
+    "                ini = time()\n",
+    "                method(l)\n",
+    "                fin = time()\n",
+    "                res += fin-ini\n",
     "        res = (res/n)*1000\n",
-    "        \n",
     "        print('close len {l} in {name} in {s: .2f}ms'.format(l=len(l),s=res,name=name))\n",
     "        f.write(\"{l} {t:.2f}\\n\".format(l = len(l), t= res))\n",
     "    f.close()"
@@ -127,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -135,21 +140,33 @@
      "output_type": "stream",
      "text": [
       "close len 10 in bubleSort in  0.00ms\n",
-      "close len 100 in bubleSort in  0.79ms\n",
-      "close len 1000 in bubleSort in  83.77ms\n",
-      "close len 2000 in bubleSort in  337.89ms\n",
-      "close len 3000 in bubleSort in  755.76ms\n",
-      "close len 5000 in bubleSort in  2110.67ms\n",
-      "close len 8000 in bubleSort in  5409.76ms\n",
-      "close len 10000 in bubleSort in  8566.80ms\n",
+      "close len 100 in bubleSort in  0.60ms\n",
+      "close len 1000 in bubleSort in  83.20ms\n",
+      "close len 2000 in bubleSort in  337.60ms\n",
+      "close len 3000 in bubleSort in  760.40ms\n",
+      "close len 5000 in bubleSort in  2115.00ms\n",
+      "close len 8000 in bubleSort in  5396.20ms\n",
+      "close len 10000 in bubleSort in  8466.20ms\n",
       "close len 10 in mergeSort in  0.00ms\n",
-      "close len 100 in mergeSort in  0.20ms\n",
+      "close len 100 in mergeSort in  0.00ms\n",
       "close len 1000 in mergeSort in  1.80ms\n",
       "close len 2000 in mergeSort in  4.00ms\n",
       "close len 3000 in mergeSort in  6.40ms\n",
-      "close len 5000 in mergeSort in  11.00ms\n",
-      "close len 8000 in mergeSort in  18.49ms\n",
-      "close len 10000 in mergeSort in  25.20ms\n"
+      "close len 5000 in mergeSort in  11.40ms\n",
+      "close len 8000 in mergeSort in  18.80ms\n",
+      "close len 10000 in mergeSort in  25.00ms\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\henri\\Documents\\UFC\\SEMESTRE 8\\PAA\\Atividade03\\atv3.ipynb Célula: 9\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/henri/Documents/UFC/SEMESTRE%208/PAA/Atividade03/atv3.ipynb#X11sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m GenerateDataByMethod(lenghts,n, mergeSort, \u001b[39m'\u001b[39m\u001b[39mmergeSort\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/henri/Documents/UFC/SEMESTRE%208/PAA/Atividade03/atv3.ipynb#X11sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m inputs \u001b[39m=\u001b[39m [\u001b[39m10\u001b[39m, \u001b[39m20\u001b[39m, \u001b[39m30\u001b[39m, \u001b[39m40\u001b[39m, \u001b[39m50\u001b[39m]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/henri/Documents/UFC/SEMESTRE%208/PAA/Atividade03/atv3.ipynb#X11sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m GenerateDataByMethod(inputs,n, recursive, \u001b[39m'\u001b[39;49m\u001b[39mrecursive\u001b[39;49m\u001b[39m'\u001b[39;49m,inputTypeArray\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n",
+      "\u001b[1;32mc:\\Users\\henri\\Documents\\UFC\\SEMESTRE 8\\PAA\\Atividade03\\atv3.ipynb Célula: 9\u001b[0m in \u001b[0;36mGenerateDataByMethod\u001b[1;34m(lenghts, n, method, name, inputTypeArray)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/henri/Documents/UFC/SEMESTRE%208/PAA/Atividade03/atv3.ipynb#X11sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     res \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m fin\u001b[39m-\u001b[39mini\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/henri/Documents/UFC/SEMESTRE%208/PAA/Atividade03/atv3.ipynb#X11sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/henri/Documents/UFC/SEMESTRE%208/PAA/Atividade03/atv3.ipynb#X11sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     aux \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39;49m(l)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/henri/Documents/UFC/SEMESTRE%208/PAA/Atividade03/atv3.ipynb#X11sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     ini \u001b[39m=\u001b[39m time()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/henri/Documents/UFC/SEMESTRE%208/PAA/Atividade03/atv3.ipynb#X11sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     method(aux)\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'int' has no len()"
      ]
     }
    ],
@@ -157,7 +174,10 @@
     "lenghts = GenerateData([10,100,1000,2000,3000, 5000, 8000, 10000])\n",
     "n = 5\n",
     "GenerateDataByMethod(lenghts,n, bubleSort, 'bubleSort')\n",
-    "GenerateDataByMethod(lenghts,n, mergeSort, 'mergeSort')\n"
+    "GenerateDataByMethod(lenghts,n, mergeSort, 'mergeSort')\n",
+    "inputs = [10, 20, 30, 40, 50]\n",
+    "GenerateDataByMethod(inputs,n, recursive, 'recursive',inputTypeArray=False)\n",
+    "\n"
    ]
   },
   {
