--- a/Trabalho/main/Trabalho.ipynb
+++ b/Trabalho/main/Trabalho.ipynb
@@ -12,6 +12,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import randint "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -69,17 +78,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0,0) -> t: a p: a*\n",
+      "\t(1,0) -> t:  p: a*\n",
+      "-------------\n",
+      "(0,0) -> t: aab p: c*a*b\n",
+      "\t(0,2) -> t: aab p: a*b\n",
+      "\t\t(0,4) -> t: aab p: b\n",
+      "\t\t(1,2) -> t: ab p: a*b\n",
+      "\t\t\t(1,4) -> t: ab p: b\n",
+      "\t\t\t(2,2) -> t: b p: a*b\n",
+      "\t\t\t\t(2,4) -> t: b p: b\n",
+      "-------------\n",
+      "(0,0) -> t: aaaa p: c*a*\n",
+      "\t(0,2) -> t: aaaa p: a*\n",
+      "\t\t(1,2) -> t: aaa p: a*\n",
+      "\t\t\t(2,2) -> t: aa p: a*\n",
+      "\t\t\t\t(3,2) -> t: a p: a*\n",
+      "\t\t\t\t\t(4,2) -> t:  p: a*\n",
+      "-------------\n",
+      "(0,0) -> t: abcx p: .*\n",
+      "\t(1,0) -> t: bcx p: .*\n",
+      "\t\t(2,0) -> t: cx p: .*\n",
+      "\t\t\t(3,0) -> t: x p: .*\n",
+      "\t\t\t\t(4,0) -> t:  p: .*\n",
+      "-------------\n",
+      "(0,0) -> t: abcxa p: abcxa\n",
+      "\t(1,1) -> t: bcxa p: bcxa\n",
+      "\t\t(2,2) -> t: cxa p: cxa\n",
+      "\t\t\t(3,3) -> t: xa p: xa\n",
+      "\t\t\t\t(4,4) -> t: a p: a\n",
+      "-------------\n",
+      "(0,0) -> t: z p: a*b*c*zk*\n",
+      "\t(0,2) -> t: z p: b*c*zk*\n",
+      "\t\t(0,4) -> t: z p: c*zk*\n",
+      "\t\t\t(0,6) -> t: z p: zk*\n",
+      "\t\t\t\t(1,7) -> t:  p: k*\n",
+      "-------------\n",
+      "(0,0) -> t: xccc p: xc*\n",
+      "\t(1,1) -> t: ccc p: c*\n",
+      "\t\t(2,1) -> t: cc p: c*\n",
+      "\t\t\t(3,1) -> t: c p: c*\n",
+      "\t\t\t\t(4,1) -> t:  p: c*\n",
+      "-------------\n",
+      "(0,0) -> t:  p: .*\n",
+      "-------------\n",
+      "(0,0) -> t: dasdasjda p: .*\n",
+      "\t(1,0) -> t: asdasjda p: .*\n",
+      "\t\t(2,0) -> t: sdasjda p: .*\n",
+      "\t\t\t(3,0) -> t: dasjda p: .*\n",
+      "\t\t\t\t(4,0) -> t: asjda p: .*\n",
+      "\t\t\t\t\t(5,0) -> t: sjda p: .*\n",
+      "\t\t\t\t\t\t(6,0) -> t: jda p: .*\n",
+      "\t\t\t\t\t\t\t(7,0) -> t: da p: .*\n",
+      "\t\t\t\t\t\t\t\t(8,0) -> t: a p: .*\n",
+      "\t\t\t\t\t\t\t\t\t(9,0) -> t:  p: .*\n",
+      "-------------\n",
+      "(0,0) -> t: aaaax p: .*a*\n",
+      "\t(0,2) -> t: aaaax p: a*\n",
+      "\t\t(1,2) -> t: aaax p: a*\n",
+      "\t\t\t(2,2) -> t: aax p: a*\n",
+      "\t\t\t\t(3,2) -> t: ax p: a*\n",
+      "\t\t\t\t\t(4,2) -> t: x p: a*\n",
+      "\t(1,0) -> t: aaax p: .*a*\n",
+      "\n",
+      "#\n",
+      "\n",
+      "\t\t(2,0) -> t: aax p: .*a*\n",
+      "\n",
+      "#\n",
+      "\n",
+      "\t\t\t(3,0) -> t: ax p: .*a*\n",
+      "\n",
+      "#\n",
+      "\n",
+      "\t\t\t\t(4,0) -> t: x p: .*a*\n",
+      "\n",
+      "#\n",
+      "\n",
+      "\t\t\t\t\t(5,0) -> t:  p: .*a*\n",
+      "\t\t\t\t\t\t(5,2) -> t:  p: a*\n",
+      "-------------\n",
+      "(0,0) -> t: aaaa p: a\n",
+      "-------------\n",
+      "(0,0) -> t: bbb p: a*\n",
+      "-------------\n",
+      "(0,0) -> t: bbb p: ca*\n",
+      "-------------\n",
+      "(0,0) -> t: bbb p: b*c\n",
+      "\t(0,2) -> t: bbb p: c\n",
+      "\t(1,0) -> t: bb p: b*c\n",
+      "\t\t(1,2) -> t: bb p: c\n",
+      "\t\t(2,0) -> t: b p: b*c\n",
+      "\t\t\t(2,2) -> t: b p: c\n",
+      "\t\t\t(3,0) -> t:  p: b*c\n",
+      "\t\t\t\t(3,2) -> t:  p: c\n",
+      "-------------\n",
+      "(0,0) -> t: aaaab p: .*a*x\n",
+      "\t(0,2) -> t: aaaab p: a*x\n",
+      "\t\t(0,4) -> t: aaaab p: x\n",
+      "\t\t(1,2) -> t: aaab p: a*x\n",
+      "\t\t\t(1,4) -> t: aaab p: x\n",
+      "\t\t\t(2,2) -> t: aab p: a*x\n",
+      "\t\t\t\t(2,4) -> t: aab p: x\n",
+      "\t\t\t\t(3,2) -> t: ab p: a*x\n",
+      "\t\t\t\t\t(3,4) -> t: ab p: x\n",
+      "\t\t\t\t\t(4,2) -> t: b p: a*x\n",
+      "\t\t\t\t\t\t(4,4) -> t: b p: x\n",
+      "\t(1,0) -> t: aaab p: .*a*x\n",
+      "\n",
+      "#\n",
+      "\n",
+      "\t\t(2,0) -> t: aab p: .*a*x\n",
+      "\n",
+      "#\n",
+      "\n",
+      "\t\t\t(3,0) -> t: ab p: .*a*x\n",
+      "\n",
+      "#\n",
+      "\n",
+      "\t\t\t\t(4,0) -> t: b p: .*a*x\n",
+      "\n",
+      "#\n",
+      "\n",
+      "\t\t\t\t\t(5,0) -> t:  p: .*a*x\n",
+      "\t\t\t\t\t\t(5,2) -> t:  p: a*x\n",
+      "\t\t\t\t\t\t\t(5,4) -> t:  p: x\n",
+      "-------------\n",
+      "(0,0) -> t:  p: b*ac*\n",
+      "\t(0,2) -> t:  p: ac*\n",
+      "-------------\n",
+      "(0,0) -> t: xaxaxa p: x*a*\n",
+      "\t(0,2) -> t: xaxaxa p: a*\n",
+      "\t(1,0) -> t: axaxa p: x*a*\n",
+      "\t\t(1,2) -> t: axaxa p: a*\n",
+      "\t\t\t(2,2) -> t: xaxa p: a*\n",
+      "-------------\n",
+      "(0,0) -> t: dotatres p: valve\n",
+      "-------------\n"
+     ]
+    }
+   ],
    "source": [
     "def isMatch(text, pattern):\n",
     "  memo = {}\n",
-    "  countMemo = 0\n",
     "  def dp(i, j, count=0):\n",
-    "\n",
     "    if (i, j)  in memo:\n",
-    "      countMemo = countMemo+1\n",
     "      print('\\n#\\n')\n",
     "      return memo[(i, j)]\n",
     "    if j == len(pattern):\n",
@@ -177,6 +327,293 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gerar strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "patterns: ...: \n",
+      "ugj\n",
+      "usx\n",
+      "til\n",
+      "--------------\n",
+      "patterns: a*: \n",
+      "aaa\n",
+      "a\n",
+      "aaa\n",
+      "--------------\n",
+      "patterns: ab*: \n",
+      "abbbbb\n",
+      "abb\n",
+      "abb\n",
+      "--------------\n",
+      "patterns: .*: \n",
+      "drjm\n",
+      "j\n",
+      "ogsr\n",
+      "--------------\n",
+      "patterns: azbg: \n",
+      "azbg\n",
+      "azbg\n",
+      "azbg\n",
+      "--------------\n",
+      "patterns: a*bcg*k: \n",
+      "aaabcgk\n",
+      "aaaabcgggk\n",
+      "aaabcgggggk\n",
+      "--------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def stringGenerateByPattern(pattern: str, size: int=0)-> str:\n",
+    "\n",
+    "  def gen(i: int):\n",
+    "    if(i>= len(pattern)):\n",
+    "      return ''\n",
+    "    options = list(map(chr, range(97, 123)))\n",
+    "    if(i+1 < len(pattern) and pattern[i+1] == '*'):\n",
+    "      current = pattern[i]*randint(0,5)\n",
+    "      if(pattern[i] == '.'):\n",
+    "        current = ''.join(\n",
+    "          [options[randint(0,len(options))] for _ in current]\n",
+    "        )\n",
+    "      return current + gen(i+2)\n",
+    "    return (pattern[i] if pattern[i] != '.' else options[randint(0,len(options)-1)])  + gen(i+1)\n",
+    "  return gen(0)\n",
+    "\n",
+    "options = ['...', 'a*', 'ab*', '.*', 'azbg', 'a*bcg*k']\n",
+    "for op in options:\n",
+    "  print(f'patterns: {op}: ')\n",
+    "  print(stringGenerateByPattern(op))\n",
+    "  print(stringGenerateByPattern(op))\n",
+    "  print(stringGenerateByPattern(op))\n",
+    "  print('--------------')\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gerar patterns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bndwr\n",
+      "v.ti*\n",
+      "xawu.\n",
+      "s*zq*\n",
+      "nbrq.\n",
+      "q*etg\n",
+      "avd*l\n",
+      "vwe*c\n",
+      "yz..r\n",
+      "rhnwh\n"
+     ]
+    }
+   ],
+   "source": [
+    "def patternGenerateBySize(size: int)->str :\n",
+    "  res = ''\n",
+    "  options = ['.']+list(map(chr, range(97, 123))) + ['.']\n",
+    "  get = lambda  : options[randint(0,len(options)-1)] \n",
+    "  for i in range(size):\n",
+    "    if(i == 0 or res[-1] == '*'):\n",
+    "      res += get()\n",
+    "    else:\n",
+    "      res += get() if randint(0,100)%5 !=0 else '*'\n",
+    "  return res\n",
+    "\n",
+    "for i in range(10):\n",
+    "  print(patternGenerateBySize(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gerar dados:\n",
+    "\n",
+    "* O tamanho de **text** é *n*\n",
+    "* O tamanho de **pattern** é *m*\n",
+    "\n",
+    "fazer uma média pra um gráfico **tempo x n**?\n",
+    "\n",
+    "fazer uma média pra um gráfico **tempo x m**?\n",
+    "\n",
+    "fazer uma média pra um gráfico **m x n**?\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Estimativa de complexidade teorica:\n",
+    "\n",
+    "$$\\text{O(} (T+P)\\cdot 2^{T+\\frac{P}{2}} \\text{)}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Funções\n",
+    "\n",
+    "### Normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isMatch(text, pattern):\n",
+    "  def dp(i, j):\n",
+    "    if j == len(pattern):\n",
+    "        ans = i == len(text)\n",
+    "    else:\n",
+    "        first_match = i < len(text) and pattern[j] in {text[i], '.'}\n",
+    "        if j+1 < len(pattern) and pattern[j+1] == '*':\n",
+    "            ans =  dp(i, j+2) or first_match and dp(i+1, j)\n",
+    "        else:\n",
+    "            ans = first_match and dp(i+1, j+1)\n",
+    "\n",
+    "    return ans\n",
+    "  return dp(0, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isMatch(text: str, pattern: str)-> bool:\n",
+    "    memo = {}\n",
+    "    def match(i: int, j: int)-> bool:\n",
+    "        if((i,j) in memo):\n",
+    "            return memo[(i,j)]\n",
+    "        if (j == len(pattern)):\n",
+    "            memo[(i,j)] = ( i == len(text) )\n",
+    "            return memo[(i,j)]\n",
+    "        first_match = i < len(text) and pattern[j] in {text[i], '.'}\n",
+    "        if (j+1 < len(pattern) and pattern[j+1] == '*'):\n",
+    "            memo[(i,j)] = match(i, j+2) or (first_match and match(i+1, j))\n",
+    "            return memo[(i,j)]\n",
+    "        else:\n",
+    "            memo[(i,j)] = first_match and match(i+1, j+1)\n",
+    "            return memo[(i,j)]\n",
+    "    return match(0,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aaaaabc\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a*bcd*c -> [a,*,b,c,d,*,c]\n",
+    "def stringGenerateByPattern(pattern: str, size: int)-> str:\n",
+    "  stackCharStar = []\n",
+    "  _size:list[int] = [size]\n",
+    "  lenP = len(pattern)\n",
+    "  alphabet = list(map(chr, range(97, 123)))\n",
+    "  get = lambda  : alphabet[randint(0,len(alphabet)-1)] \n",
+    "  def gen(i:int)->str:\n",
+    "    if(_size<0):\n",
+    "      return '*'\n",
+    "    if(i>= len(pattern)):\n",
+    "      return ''\n",
+    "    if(i+1 < lenP and pattern[i+1]=='*'):\n",
+    "      stackCharStar.append(pattern[i])\n",
+    "      next = gen(i+2, _size)\n",
+    "      currentSize = 0\n",
+    "      if(len(stackCharStar)>1):\n",
+    "        currentSize = randint(0,_size)\n",
+    "      else:\n",
+    "        currentSize = _size\n",
+    "      stackCharStar.pop()\n",
+    "      _size -= currentSize\n",
+    "      current = pattern[i]*currentSize if currentSize >0 else ''\n",
+    "      if(pattern[i]=='.'):\n",
+    "        current = ''.join([get() for _ in current])\n",
+    "      prev = current\n",
+    "      return prev + next\n",
+    "    else:\n",
+    "      value = get() if pattern[i]=='.' else pattern[i]\n",
+    "      _size -= 1\n",
+    "      return value + gen(i+1, _size)\n",
+    "  return gen(0, size)\n",
+    "    \n",
+    "print(stringGenerateByPattern('a*bc', 5))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "([0, 2, 4], 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def aaa():\n",
+    "    count = 10\n",
+    "    aux: tuple[list,int] = ([], count)\n",
+    "    print(aux[0])\n",
+    "    def bbb():\n",
+    "        for i in range(5):\n",
+    "            if i%2==0:\n",
+    "                aux[0].append(i)\n",
+    "    bbb()\n",
+    "    print(aux)\n",
+    "\n",
+    "aaa()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -186,7 +623,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -200,12 +637,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+    "hash": "c261aea317cc0286b3b3261fbba9abdec21eaa57589985bb7a274bf54d6cc0a7"
    }
   }
  },
