--- a/Trabalho/main/other/Trabalho.ipynb
+++ b/Trabalho/main/other/Trabalho.ipynb
@@ -561,7 +561,7 @@
     "      return ''\n",
     "    if(i+1 < lenP and pattern[i+1]=='*'):\n",
     "      stackCharStar.append(pattern[i])\n",
-    "      next = gen(i+2, _size)\n",
+    "      next = gen(i+2, _size[0])\n",
     "      currentSize = 0\n",
     "      if(len(stackCharStar)>1):\n",
     "        currentSize = randint(0,_size)\n",
