--- a/Trabalho/main/other/Trabalho.ipynb
+++ b/Trabalho/main/other/Trabalho.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -343,24 +343,24 @@
      "output_type": "stream",
      "text": [
       "patterns: ...: \n",
-      "ugj\n",
-      "usx\n",
-      "til\n",
+      "ice\n",
+      "wmy\n",
+      "vth\n",
       "--------------\n",
       "patterns: a*: \n",
-      "aaa\n",
-      "a\n",
-      "aaa\n",
+      "\n",
+      "aaaa\n",
+      "aaaa\n",
       "--------------\n",
       "patterns: ab*: \n",
-      "abbbbb\n",
+      "abbb\n",
       "abb\n",
-      "abb\n",
+      "abbb\n",
       "--------------\n",
       "patterns: .*: \n",
-      "drjm\n",
-      "j\n",
-      "ogsr\n",
+      "v\n",
+      "iq\n",
+      "ynx\n",
       "--------------\n",
       "patterns: azbg: \n",
       "azbg\n",
@@ -368,9 +368,9 @@
       "azbg\n",
       "--------------\n",
       "patterns: a*bcg*k: \n",
-      "aaabcgk\n",
-      "aaaabcgggk\n",
-      "aaabcgggggk\n",
+      "abcgggggk\n",
+      "aaaabcgggggk\n",
+      "bck\n",
       "--------------\n"
      ]
     }
@@ -393,7 +393,7 @@
     "    return (pattern[i] if pattern[i] != '.' else options[randint(0,len(options)-1)])  + gen(i+1)\n",
     "  return gen(0)\n",
     "\n",
-    "options = ['...', 'a*', 'ab*', '.*', 'azbg', 'a*bcg*k']\n",
+    "options = ['...', 'ab*', 'azbg', 'a*bcg*k']\n",
     "for op in options:\n",
     "  print(f'patterns: {op}: ')\n",
     "  print(stringGenerateByPattern(op))\n",
