--- a/Trabalho/main/other/Trabalho.ipynb
+++ b/Trabalho/main/other/Trabalho.ipynb
@@ -21,9 +21,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0,0) -> t: aaax p: .*a*b\n",
+      "\t(0,2) -> t: aaax p: a*b\n",
+      "\t\t(0,4) -> t: aaax p: b\n",
+      "\t\t(1,2) -> t: aax p: a*b\n",
+      "\t\t\t(1,4) -> t: aax p: b\n",
+      "\t\t\t(2,2) -> t: ax p: a*b\n",
+      "\t\t\t\t(2,4) -> t: ax p: b\n",
+      "\t\t\t\t(3,2) -> t: x p: a*b\n",
+      "\t\t\t\t\t(3,4) -> t: x p: b\n",
+      "\t(1,0) -> t: aax p: .*a*b\n",
+      "\t\t(1,2) -> t: aax p: a*b\n",
+      "\t\t\t(1,4) -> t: aax p: b\n",
+      "\t\t\t(2,2) -> t: ax p: a*b\n",
+      "\t\t\t\t(2,4) -> t: ax p: b\n",
+      "\t\t\t\t(3,2) -> t: x p: a*b\n",
+      "\t\t\t\t\t(3,4) -> t: x p: b\n",
+      "\t\t(2,0) -> t: ax p: .*a*b\n",
+      "\t\t\t(2,2) -> t: ax p: a*b\n",
+      "\t\t\t\t(2,4) -> t: ax p: b\n",
+      "\t\t\t\t(3,2) -> t: x p: a*b\n",
+      "\t\t\t\t\t(3,4) -> t: x p: b\n",
+      "\t\t\t(3,0) -> t: x p: .*a*b\n",
+      "\t\t\t\t(3,2) -> t: x p: a*b\n",
+      "\t\t\t\t\t(3,4) -> t: x p: b\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "def isMatch(text, pattern):\n",
     "  def dp(i, j, count=0):\n",
@@ -335,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -343,24 +375,14 @@
      "output_type": "stream",
      "text": [
       "patterns: ...: \n",
-      "ice\n",
-      "wmy\n",
-      "vth\n",
-      "--------------\n",
-      "patterns: a*: \n",
-      "\n",
-      "aaaa\n",
-      "aaaa\n",
+      "jmr\n",
+      "gka\n",
+      "jzk\n",
       "--------------\n",
       "patterns: ab*: \n",
-      "abbb\n",
+      "abbbbb\n",
       "abb\n",
-      "abbb\n",
-      "--------------\n",
-      "patterns: .*: \n",
-      "v\n",
-      "iq\n",
-      "ynx\n",
+      "a\n",
       "--------------\n",
       "patterns: azbg: \n",
       "azbg\n",
@@ -368,9 +390,9 @@
       "azbg\n",
       "--------------\n",
       "patterns: a*bcg*k: \n",
-      "abcgggggk\n",
-      "aaaabcgggggk\n",
-      "bck\n",
+      "aaaaabcgk\n",
+      "aaaabcggggk\n",
+      "aabcgggk\n",
       "--------------\n"
      ]
     }
