--- a/Trabalho/main/other/Trabalho.ipynb
+++ b/Trabalho/main/other/Trabalho.ipynb
@@ -636,6 +636,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Teste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1024.0\n",
+      "1.0 [0,0]\n",
+      "1.0 [0,1]\n",
+      "1.0 [0,2]\n",
+      "1.0 [1,0]\n",
+      "2.0 [1,1]\n",
+      "3.0 [1,2]\n",
+      "1.0 [2,0]\n",
+      "3.0 [2,1]\n",
+      "6.0 [2,2]\n",
+      "1.0 [3,0]\n",
+      "4.0 [3,1]\n",
+      "10.0 [3,2]\n",
+      "1.0 [4,0]\n",
+      "5.0 [4,1]\n",
+      "15.0 [4,2]\n",
+      "1.0 [5,0]\n",
+      "6.0 [5,1]\n",
+      "21.0 [5,2]\n",
+      "1.0 [6,0]\n",
+      "7.0 [6,1]\n",
+      "28.0 [6,2]\n",
+      "1.0 [7,0]\n",
+      "8.0 [7,1]\n",
+      "36.0 [7,2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "164.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "memo = {}\n",
+    "def fat(n):\n",
+    "    if(n in memo): return memo[n]\n",
+    "    if(n==0): \n",
+    "        memo[n] = 1\n",
+    "    else:\n",
+    "        memo[n] = n*fat(n-1)\n",
+    "    return memo[n]\n",
+    "\n",
+    "\n",
+    "def comb(m,p):\n",
+    "    return fat(m)/(fat(p)*fat(m-p))\n",
+    "\n",
+    "\n",
+    "def func(t,p):\n",
+    "    sum =0\n",
+    "    for i in range(t):\n",
+    "        for j in range((int)(p/2)+1):\n",
+    "            aux =comb(i+j,i) \n",
+    "            sum+=aux\n",
+    "            print(f'{aux} [{i},{j}]')\n",
+    "    return sum\n",
+    "\n",
+    "t= 8\n",
+    "p = 4\n",
+    "\n",
+    "res = lambda x, y: 2**(x+ y/2)\n",
+    "print(res(t,p))\n",
+    "\n",
+    "func(t,p)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
