--- a/Trabalho/main/other/Trabalho.ipynb
+++ b/Trabalho/main/other/Trabalho.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -322,6 +322,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0,0) -> t: aaax p: .*a*b\n",
+      "\t(0,2) -> t: aaax p: a*b\n",
+      "\t\t(0,4) -> t: aaax p: b\n",
+      "\t\t(1,2) -> t: aax p: a*b\n",
+      "\t\t\t(1,4) -> t: aax p: b\n",
+      "\t\t\t(2,2) -> t: ax p: a*b\n",
+      "\t\t\t\t(2,4) -> t: ax p: b\n",
+      "\t\t\t\t(3,2) -> t: x p: a*b\n",
+      "\t\t\t\t\t(3,4) -> t: x p: b\n",
+      "\t(1,0) -> t: aax p: .*a*b\n",
+      "\n",
+      "#\n",
+      "\n",
+      "\t\t(2,0) -> t: ax p: .*a*b\n",
+      "\n",
+      "#\n",
+      "\n",
+      "\t\t\t(3,0) -> t: x p: .*a*b\n",
+      "\n",
+      "#\n",
+      "\n",
+      "\t\t\t\t(4,0) -> t:  p: .*a*b\n",
+      "\t\t\t\t\t(4,2) -> t:  p: a*b\n",
+      "\t\t\t\t\t\t(4,4) -> t:  p: b\n",
+      "-------------\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(isMatch('aaax','.*a*b'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -335,27 +377,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0,0) -> t: aaax p: .*a*b\n",
+      "\t(0,2) -> t: aaax p: a*b\n",
+      "\t\t(0,4) -> t: aaax p: b\n",
+      "\t\t(1,2) -> t: aax p: a*b\n",
+      "\t\t\t(1,4) -> t: aax p: b\n",
+      "\t\t\t(2,2) -> t: ax p: a*b\n",
+      "\t\t\t\t(2,4) -> t: ax p: b\n",
+      "\t\t\t\t(3,2) -> t: x p: a*b\n",
+      "\t\t\t\t\t(3,4) -> t: x p: b\n",
+      "\t(1,0) -> t: aax p: .*a*b\n",
+      "#\n",
+      "\t\t(2,0) -> t: ax p: .*a*b\n",
+      "#\n",
+      "\t\t\t(3,0) -> t: x p: .*a*b\n",
+      "#\n",
+      "\t\t\t\t(4,0) -> t:  p: .*a*b\n",
+      "\t\t\t\t\t(4,2) -> t:  p: a*b\n",
+      "\t\t\t\t\t\t(4,4) -> t:  p: b\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "def isMatch(text: str, pattern: str)-> bool:\n",
+    "def isMatchDP(text: str, pattern: str)-> bool:\n",
     "    memo = {}\n",
-    "    def match(i: int, j: int)-> bool:\n",
+    "    def match(i: int, j: int, count = 0)-> bool:\n",
     "        if((i,j) in memo):\n",
+    "            print('#')\n",
     "            return memo[(i,j)]\n",
     "        if (j == len(pattern)):\n",
     "            memo[(i,j)] = ( i == len(text) )\n",
     "            return memo[(i,j)]\n",
+    "        if(i<= len(text) and j<len(pattern)):\n",
+    "            print('\\t'*count+f'({i},{j}) -> t: {text[i:]} p: {pattern[j:]}')\n",
+    "            # print(memo)\n",
     "        first_match = i < len(text) and pattern[j] in {text[i], '.'}\n",
     "        if (j+1 < len(pattern) and pattern[j+1] == '*'):\n",
-    "            memo[(i,j)] = match(i, j+2) or (first_match and match(i+1, j))\n",
+    "            memo[(i,j)] = match(i, j+2, count = count+1) or (first_match and match(i+1, j,count = count+1))\n",
     "            return memo[(i,j)]\n",
     "        else:\n",
-    "            memo[(i,j)] = first_match and match(i+1, j+1)\n",
+    "            memo[(i,j)] = first_match and match(i+1, j+1, count = count+1)\n",
     "            return memo[(i,j)]\n",
     "    return match(0,0)\n",
-    "print(isMatch('aaax','.*a*'))"
+    "print(isMatchDP('aaax','.*a*b'))"
    ]
   },
   {
@@ -644,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -653,29 +725,29 @@
      "text": [
       "1024.0\n",
       "1.0 [0,0]\n",
-      "1.0 [0,1]\n",
-      "1.0 [0,2]\n",
       "1.0 [1,0]\n",
-      "2.0 [1,1]\n",
-      "3.0 [1,2]\n",
       "1.0 [2,0]\n",
-      "3.0 [2,1]\n",
-      "6.0 [2,2]\n",
-      "1.0 [3,0]\n",
-      "4.0 [3,1]\n",
-      "10.0 [3,2]\n",
-      "1.0 [4,0]\n",
-      "5.0 [4,1]\n",
-      "15.0 [4,2]\n",
-      "1.0 [5,0]\n",
-      "6.0 [5,1]\n",
-      "21.0 [5,2]\n",
-      "1.0 [6,0]\n",
-      "7.0 [6,1]\n",
-      "28.0 [6,2]\n",
-      "1.0 [7,0]\n",
-      "8.0 [7,1]\n",
-      "36.0 [7,2]\n"
+      "1.0 [1,1]\n",
+      "2.0 [2,1]\n",
+      "3.0 [3,1]\n",
+      "1.0 [2,2]\n",
+      "3.0 [3,2]\n",
+      "6.0 [4,2]\n",
+      "1.0 [3,3]\n",
+      "4.0 [4,3]\n",
+      "10.0 [5,3]\n",
+      "1.0 [4,4]\n",
+      "5.0 [5,4]\n",
+      "15.0 [6,4]\n",
+      "1.0 [5,5]\n",
+      "6.0 [6,5]\n",
+      "21.0 [7,5]\n",
+      "1.0 [6,6]\n",
+      "7.0 [7,6]\n",
+      "28.0 [8,6]\n",
+      "1.0 [7,7]\n",
+      "8.0 [8,7]\n",
+      "36.0 [9,7]\n"
      ]
     },
     {
@@ -684,7 +756,7 @@
        "164.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +782,7 @@
     "        for j in range((int)(p/2)+1):\n",
     "            aux =comb(i+j,i) \n",
     "            sum+=aux\n",
-    "            print(f'{aux} [{i},{j}]')\n",
+    "            print(f'{aux}\\t\\t[{i+j},{i}]')\n",
     "    return sum\n",
     "\n",
     "t= 8\n",
