--- a/Trabalho/main/other/Trabalho.ipynb
+++ b/Trabalho/main/other/Trabalho.ipynb
@@ -716,47 +716,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1024.0\n",
-      "1.0 [0,0]\n",
-      "1.0 [1,0]\n",
-      "1.0 [2,0]\n",
-      "1.0 [1,1]\n",
-      "2.0 [2,1]\n",
-      "3.0 [3,1]\n",
-      "1.0 [2,2]\n",
-      "3.0 [3,2]\n",
-      "6.0 [4,2]\n",
-      "1.0 [3,3]\n",
-      "4.0 [4,3]\n",
-      "10.0 [5,3]\n",
-      "1.0 [4,4]\n",
-      "5.0 [5,4]\n",
-      "15.0 [6,4]\n",
-      "1.0 [5,5]\n",
-      "6.0 [6,5]\n",
-      "21.0 [7,5]\n",
-      "1.0 [6,6]\n",
-      "7.0 [7,6]\n",
-      "28.0 [8,6]\n",
-      "1.0 [7,7]\n",
-      "8.0 [8,7]\n",
-      "36.0 [9,7]\n"
+      "64.0\n",
+      "1.0\t\t[0,0]\n",
+      "1.0\t\t[0,2]\n",
+      "1.0\t\t[1,0]\n",
+      "3.0\t\t[1,2]\n",
+      "1.0\t\t[2,0]\n",
+      "6.0\t\t[2,2]\n",
+      "1.0\t\t[3,0]\n",
+      "10.0\t\t[3,2]\n",
+      "1.0\t\t[4,0]\n",
+      "15.0\t\t[4,2]\n",
+      "1.0\t\t[5,0]\n",
+      "21.0\t\t[5,2]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "164.0"
+       "62.0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,15 +766,15 @@
     "\n",
     "def func(t,p):\n",
     "    sum =0\n",
-    "    for i in range(t):\n",
-    "        for j in range((int)(p/2)+1):\n",
+    "    for i in range(t+1):\n",
+    "        for j in range(0,p+1,2):\n",
     "            aux =comb(i+j,i) \n",
     "            sum+=aux\n",
-    "            print(f'{aux}\\t\\t[{i+j},{i}]')\n",
+    "            print(f'{aux}\\t\\t[{i},{j}]')\n",
     "    return sum\n",
     "\n",
-    "t= 8\n",
-    "p = 4\n",
+    "t= len('aaaab')\n",
+    "p = len('a*b')\n",
     "\n",
     "res = lambda x, y: 2**(x+ y/2)\n",
     "print(res(t,p))\n",
