--- a/Trabalho/main/other/Trabalho.ipynb
+++ b/Trabalho/main/other/Trabalho.ipynb
@@ -716,35 +716,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "64.0\n",
       "1.0\t\t[0,0]\n",
       "1.0\t\t[0,2]\n",
-      "1.0\t\t[1,0]\n",
-      "3.0\t\t[1,2]\n",
-      "1.0\t\t[2,0]\n",
-      "6.0\t\t[2,2]\n",
-      "1.0\t\t[3,0]\n",
-      "10.0\t\t[3,2]\n",
-      "1.0\t\t[4,0]\n",
-      "15.0\t\t[4,2]\n",
-      "1.0\t\t[5,0]\n",
-      "21.0\t\t[5,2]\n"
+      "1.0\t\t[0,4]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "62.0"
+       "3.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,11 +763,8 @@
     "            print(f'{aux}\\t\\t[{i},{j}]')\n",
     "    return sum\n",
     "\n",
-    "t= len('aaaab')\n",
-    "p = len('a*b')\n",
-    "\n",
-    "res = lambda x, y: 2**(x+ y/2)\n",
-    "print(res(t,p))\n",
+    "t= len('')\n",
+    "p = len('a*bc')\n",
     "\n",
     "func(t,p)\n"
    ]
